deploiement/Stromae-db/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stromae-db
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: stromae-db
