deploiement/Stromae-db/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stromae-db
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - stromae-db.example.com
  rules:
    - host: stromae-db.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stromae-db
                port:
                  number: 8080
